add metric units and color

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="./assets/style.css" />
 </head>
 <body>
-    <header>
+    <header style="background-color: #1e79bb">
       <h1>Weather Dashboard</h1>
     </header>
     <main>
